# codex_usage

./: AGENTS.md  README.md  README.zh-TW.md  codex_usage_widget.py  prd.md  pyproject.toml
docs/: architecture.md  architecture.zh-TW.md
tests/: test_jsonrpc_client.py  test_layout_constants.py  test_rate_limits.py
