[project]
name = "codex-usage-widget"
version = "0.1.0"
description = "Always-on-top Codex usage widget powered by Codex app-server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "pystray>=0.19.5",
]

[project.scripts]
codex-usage-widget = "codex_usage_widget:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["codex_usage_widget"]
